2008-12-31  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Print a nice error message when --exclude-from
	  file is not readable.
	* S3/PkgInfo.py: Bumped up version to 0.9.9-pre4
	* S3/Exceptions.py: Added missing imports.
	* NEWS: Updated.
	* testsuite: reorganised UTF-8 files, added GBK encoding files,
	  moved encoding-specific files to 'tar.gz' archives, removed 
	  unicode dir.
	* run-tests.py: Adapted to the above change.
	* run-tests.sh: removed.
	* testsuite/exclude.encodings: Added.
	* run-tests.py: Don't assume utf-8, use preferred encoding 
	  instead.
	* s3cmd, S3/Utils.py, S3/Exceptions.py, S3/Progress.py,
	  S3/Config.py, S3/S3.py: Added --encoding switch and 
	  Config.encoding variable. Don't assume utf-8 for filesystem
	  and terminal output anymore.
	* s3cmd: Avoid ZeroDivisionError on fast links.
	* s3cmd: Unicodised all info() output.

2008-12-30  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-pre4
	  ---------------------------

2008-12-30  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Replace unknown Unicode characters with '?'
	  to avoid UnicodeEncodeError's. Also make all output strings
	  unicode.
	* run-tests.py: Exit on failed test. Fixed order of tests.

2008-12-29  Michal Ludvig  <michal@logix.cz>

	* TODO, NEWS: Updated
	* s3cmd: Improved wildcard get.
	* run-tests.py: Improved testsuite, added parameters support
	  to run only specified tests, cleaned up win/posix integration.
	* S3/Exception.py: Python 2.4 doesn't automatically set 
	  Exception.message.

2008-12-29  Michal Ludvig  <michal@logix.cz>

	* s3cmd, run-tests.py: Make it work on Windows.

2008-12-26  Michal Ludvig  <michal@logix.cz>

	* setup.cfg: Remove explicit install prefix. That should fix
	  Mac OS X and Windows "setup.py install" runs.

2008-12-22  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, S3/Progress.py: Display "[X of Y]"
	  in --progress mode.
	* s3cmd, S3/Config.py: Implemented recursive [get].